--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,3 +1,24 @@
 .App {
   text-align: center;
 }
+
+
+.container {
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 6px;
+  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  margin: 16px 8px;
+  padding: 16px;
+  min-width: 19%;
+}
+
+form {
+  display: flex; 
+  flex-direction: column; 
+}
+
+.smurf-list {
+  display: flex;
+  justify-content: space-evenly;
+
+}
